@@ -99,6 +99,7 @@
                 <xsd:attribute name="id" type="xsd:ID" use="required" />
                 <xsd:attribute name="label" type="texstring.type"/>
                 <xsd:attribute name="style" type="style.type"/> 
+                <xsd:attribute name="math" type="xsd:string"/>
 </xsd:attributeGroup>
 
 <!-- Standard XML Attributes -->
